<resources>

    <string name="app_name">Shopping List</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="add_shopping_list">Add a new shopping list</string>
    <string name="gray_button_desc">The image button that is clicked to add a new shopping list.</string>
    <string name="title_activity_add_modify">Create Shopping List</string>
    <string name="create_new_list">Create Shopping List</string>
    <string name="title_activity_lists">Lists</string>
    <string name="def">X</string>
    <string name="left_button">A button that is clicked to decrease item quantity</string>
    <string name="right_button">A button used to increase item quantity</string>
    <string name="itemHint">Enter item name</string>
    <string name="empty_string"></string>
    <string name="enter_shopping_list_name">Enter item name</string>
    <string name="default_shopping_list_name">Shopping List 1</string>
    <string name="title_activity_shop">Shop</string>
    <string name="zero">0</string>
    <string name="quantity">Quantity</string>
    <string name="enter_new_list_item">Enter New List Item</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_textview">Textview</string>
    <string name="shop">Shop</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="modify_list">Edit Shopping List</string>
    <string name="you_need_at_least">You need to have at least one valid list Item and a shopping list name</string>
    <string name="shopping_list_error">Shopping List Error!</string>
    <string name="fix">Fix</string>
    <string name="delete_verify">Are you sure you want to delete</string>
    <string name="done">Done</string>
    <string name="list_item">List Item</string>
    
    </resources>