<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/shoppingListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_padding"
        android:background="@android:color/darker_gray"
        android:fadingEdge="horizontal"
        android:padding="5dp"
        android:text="@string/title_activity_shopping_list" />

    <TextView
        android:id="@+id/shoppingListNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/def"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/list_item"
            android:textColor="@android:color/darker_gray"
            android:width="@dimen/shop_item_list_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textColor="@android:color/darker_gray"
            android:width="@dimen/quantity_textView" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/shoppingListViewHeight"
        android:layout_weight="0.90" >

    </ListView>

    <Button
        android:id="@+id/done_button"
        android:layout_width="@dimen/quantity_textView"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/done" />

</LinearLayout>