<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addModifyLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/default_padding"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/modifyCreateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_padding"
        android:background="@android:color/darker_gray"
        android:fadingEdge="horizontal"
        android:padding="5dp"
        android:text="@string/create_new_list" />

    <EditText
        android:id="@+id/shoppingListEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionNone"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/default_shopping_list_name" />

    <LinearLayout
        android:id="@+id/headingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/enter_new_list_item"
            android:textColor="@android:color/darker_gray"
            android:width="@dimen/itemSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textColor="@android:color/darker_gray"
            android:width="@dimen/quantity_textView" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scrollViewHeight"
        android:padding="5dp" >

        <TableLayout
            android:id="@+id/shoppingListTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:width="@dimen/quantity_textView" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancel"
            android:width="@dimen/quantity_textView" />

    </LinearLayout>

</LinearLayout>